--- a/Aula1/src/app/eventos/eventos.component.html
+++ b/Aula1/src/app/eventos/eventos.component.html
@@ -1,11 +1,11 @@
 <div>
-    <h1>Parabéns!</h1>
-    <h4>Seu componente está sendo exibido em tela</h4>
-    <hr>
-    <h5>Como aparece o seu evento abaixo?</h5>
-    
-    <div style="margin-top:30px">
-      Evento: {{ evento.name }}
+  <h1>Parabéns!</h1>
+  <h4>Seu componente está sendo exibido em tela</h4>
+  <hr>
+  <h5>Como aparece o seu evento abaixo?</h5>
+  <div *ngFor="let evento of eventos">
+    <div>
+      Nome: {{ evento.name }}
     </div>
     <div>
       Data: {{ evento.date }}
@@ -14,6 +14,7 @@
       Hora: {{ evento.time }}
     </div>
     <div>
-      Endereço: {{ evento.location.address }}, {{ evento.location.city }}, {{ evento.location.country }}
-      </div>
+      Endereço: {{ evento.location?.address }}, {{ evento.location?.city }}, {{ evento.location?.country }}
+    </div>
   </div>
+</div>
