--- a/Aula1/src/app/eventos/eventos.component.html
+++ b/Aula1/src/app/eventos/eventos.component.html
@@ -13,8 +13,11 @@
     <div>
       Hora: {{ evento.time }}
     </div>
-    <div>
-      Endereço: {{ evento.location?.address }}, {{ evento.location?.city }}, {{ evento.location?.country }}
+    <div *ngIf="evento.location && !evento.onlineUrl ">
+      Endereço: {{ evento.location.address }}, {{ evento.location.city }}, {{ evento.location.country }}
+    </div>
+    <div *ngIf="evento.onlineUrl">
+      Evento Online no {{ evento.onlineUrl }}
     </div>
   </div>
 </div>
